ingress/dev-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-phicomm
  namespace: dev
spec:
  tls:
    - hosts:
      - aidev.phicomm.com
      # This assumes tls-secret exists and the SSL 
      # certificate contains a CN for foo.bar.com
      secretName: dev-phicomm
  rules:
    - host: aidev.phicomm.com
      http:
        paths:
        - path: /
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            serviceName: oss-gateway-service
            servicePort: 9999
